--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,10 @@
+@use "./utilities/variables" as *;
+
 :root {
+  font-family: $default-font;
+  background-color: $dark-gray;
+}
+
+body {
   margin: 0;
 }
