--- a/src/utilities/_mixins.scss
+++ b/src/utilities/_mixins.scss
@@ -5,14 +5,31 @@
   flex-direction: $direction;
   justify-content: $justify;
   align-items: $align;
+  box-sizing: border-box;
 }
 
-@mixin title-font($font-size: $default-large, $font-family: Kollektif) {
+@mixin title-font(
+  $font-size: $default-large,
+  $font-family: Kollektif,
+  $font-weight: bold
+) {
   font-size: $font-size;
   font-family: $font-family;
+  font-weight: $font-weight;
 }
 
-@mixin body-font($font-size: $default-medium, $font-family: Now) {
+@mixin body-font(
+  $font-size: $default-medium,
+  $font-family: Now,
+  $font-weight: normal
+) {
   font-size: $font-size;
   font-family: $font-family;
+  font-weight: $font-weight;
+}
+
+@mixin color-theme($color: $primary-color, $background-color: transparent) {
+  background-color: $background-color;
+  border: 1px solid $primary-color;
+  color: $color;
 }
