--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -10,5 +10,10 @@ $default-font: Now, Kollektif, Inter;
 
 //Font Sizes
 $default-large: 1.9rem;
-$default-medium: 1.6rem;
+$default-medium: 1.5rem;
 $default-small: 1.2rem;
+
+//Padding
+$default-large-padding: 1.9rem;
+$default-medium-padding: 1.5rem;
+$default-small-padding: 1.125rem;
