--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -2,7 +2,12 @@
 @use "../utilities/mixins" as *;
 
 .navbar {
-  @include flex-container();
+  @include flex-container($justify: space-between, $align: center);
+  padding: $default-small-padding 0px;
+  grid-column: 2 / 12;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  gap: 20px;
 }
 
 .nav-item {
@@ -10,7 +15,8 @@
   @include title-font($font-size: $default-medium, $font-weight: normal);
   color: $white;
   text-decoration: none;
-  gap: 10px;
+  gap: 5px;
+
   &:hover {
     color: $primary-color;
   }
@@ -18,5 +24,11 @@
 
 .nav-item-container {
   @include flex-container();
-  gap: 10px;
+  grid-column: 1 / 7;
+  gap: 20px;
+}
+
+.button-item-container {
+  @include flex-container($justify: flex-end);
+  grid-column: 7 / 13;
 }
